WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249560
CSSRule.type should not return values greater than 15
https://bugs.webkit.org/show_bug.cgi?id=249560
Summary
CSSRule.type should not return values greater than 15
Antti Koivisto
Reported
2022-12-18 13:29:38 PST
It is deprecated and all newer rule types should return 0. "This enumeration is thus frozen in its current state, and no new new values will be added to reflect additional at-rules; all at-rules beyond the ones listed above will return 0."
https://w3c.github.io/csswg-drafts/cssom/#the-cssrule-interface
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-12-19 14:33:23 PST
<
rdar://problem/103531316
>
Antti Koivisto
Comment 2
2022-12-19 14:41:00 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7874
EWS
Comment 3
2022-12-20 00:18:26 PST
Committed
258128@main
(f34b82d5e7cb): <
https://commits.webkit.org/258128@main
> Reviewed commits have been landed. Closing PR #7874 and removing active labels.
Karl Rackler
Comment 4
2022-12-20 06:05:19 PST
Reverted by
https://github.com/WebKit/WebKit/pull/7909
EWS
Comment 5
2022-12-20 06:12:21 PST
Committed
258132@main
(ef048420b599): <
https://commits.webkit.org/258132@main
> Reviewed commits have been landed. Closing PR #7910 and removing active labels.
Karl Rackler
Comment 6
2022-12-20 07:06:09 PST
Reverted by
https://github.com/WebKit/WebKit/pull/7912
EWS
Comment 7
2022-12-20 07:09:41 PST
Committed
258135@main
(b961cddcf858): <
https://commits.webkit.org/258135@main
> Reviewed commits have been landed. Closing PR #7912 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug