CSSRule.type should not return values greater than 15 https://bugs.webkit.org/show_bug.cgi?id=249560 rdar://103531316

Reviewed by Sam Weinig.

"This enumeration is thus frozen in its current state, and no new new values will be added to
reflect additional at-rules; all at-rules beyond the ones listed above will return 0."

https://w3c.github.io/csswg-drafts/cssom/#the-cssrule-interface

* LayoutTests/imported/w3c/web-platform-tests/css/css-properties-values-api/at-property-cssom-expected.txt:
* Source/WebCore/css/CSSRule.cpp:
(WebCore::CSSRule::typeForCSSOM const):

Return 0 for unexposed types.
Rename for clarity.

* Source/WebCore/css/CSSRule.h:
(WebCore::CSSRule::type const): Deleted.
* Source/WebCore/css/CSSRule.idl:
* Source/WebCore/css/PropertySetCSSStyleDeclaration.cpp:
(WebCore::StyleRuleCSSStyleDeclaration::StyleRuleCSSStyleDeclaration):
* Source/WebCore/css/StyleRuleType.h:
* Source/WebKitLegacy/mac/DOM/DOMCSSRule.mm:
(-[DOMCSSRule type]):

Canonical link: https://commits.webkit.org/258128@main